--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,14 @@
 
 :root {
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-  color: #0d1b2a;
-  background-color: #f0f4f8;
+  color: var(--mantine-color-text);
+  background-color: var(--mantine-color-body);
 }
 
 body {
   min-height: 100vh;
-  background-color: #f0f4f8;
+  background-color: var(--mantine-color-body);
+  color: var(--mantine-color-text);
 }
 
 #root {
